# swig-test-cmake

./: .gitignore  CMakeLists.txt  example.cpp  example.hpp  example.i  example.py  makefile  setup.py  test.py
